adds object exercises

--- a/WK03.ipynb
+++ b/WK03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVx51lAArXjCHDehhLF12K"
+      "authorship_tag": "ABX9TyNdZK5/6fLn1EywMt6bLHmV"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Week 02 exercises"
+        "# Week 03 exercises"
       ],
       "metadata": {
         "id": "Ty-DVrJlaN1T"
@@ -63,55 +63,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Create a list with 100 number 2's"
-      ],
-      "metadata": {
-        "id": "u4rfXFu89qme"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_A = []\n",
-        "for i in range(0, 100):\n",
-        "  list_A.append(2)\n",
-        "\n",
-        "print(len(list_A))"
-      ],
-      "metadata": {
-        "id": "bUjv88t8cPNh"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Create a list with all numbers from 0 to 99"
-      ],
-      "metadata": {
-        "id": "rR_tplFVYlew"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_99 = []\n",
-        "for i in range(0, 100):\n",
-        "  list_99.append(i)\n",
-        "\n",
-        "print(len(list_99), list_99)"
-      ],
-      "metadata": {
-        "id": "MVyDponVYpwL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Create a list of 10 random numbers between 0 and 100"
+        "### Create a list of 10 random numbers between 0 and 2000"
       ],
       "metadata": {
         "id": "hBs429yN9wYE"
@@ -158,169 +110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Create a list of 100 random numbers between 0 and 1000"
-      ],
-      "metadata": {
-        "id": "5_-v7iTl955Q"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "list_of_randoms = []\n",
-        "\n",
-        "for i in range(0, 100):\n",
-        "  n = random.randint(0, 1000)\n",
-        "  list_of_randoms.append(n)\n",
-        "\n",
-        "print(list_of_randoms)"
-      ],
-      "metadata": {
-        "id": "5fYaP253u7yB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Create a list of random length N with random numbers between 0 and 1000, and where N is a random number between 100 and 250.\n",
-        "\n",
-        "Now not only the eelements of the list are random, but also its length."
-      ],
-      "metadata": {
-        "id": "d6HZ54wJ-GzP"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "num_elements = random(100, 250)\n",
-        "list_of_randoms = []\n",
-        "\n",
-        "for i in range(0, num_elements):\n",
-        "  n = random.randint(0, 1000)\n",
-        "  list_of_randoms.append(n)\n",
-        "\n",
-        "print(list_of_randoms)"
-      ],
-      "metadata": {
-        "id": "0kBHR8Ao-AOM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Find the largest element on a list\n",
-        "\n",
-        "Go through all of the elements and compare each element to the largest number seen so far.\n",
-        "\n",
-        "Update the `largest` variable if we encounter a larger number."
-      ],
-      "metadata": {
-        "id": "XfMx81LP-b_h"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "largest = list_of_randoms[0]\n",
-        "\n",
-        "for n in list_of_randoms:\n",
-        "  if n > largest:\n",
-        "    largest = n\n",
-        "\n",
-        "print(largest)"
-      ],
-      "metadata": {
-        "id": "J7eLIAnwxODF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Find the smallest element on a list\n",
-        "\n",
-        "Go through all of the elements and compare each element to the smallest number seen so far.\n",
-        "\n",
-        "Update the `smallest` variable if we encounter a smaller number."
-      ],
-      "metadata": {
-        "id": "OQoQSbbC-7Gg"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "smallest = list_of_randoms[0]\n",
-        "\n",
-        "for n in list_of_randoms:\n",
-        "  if n < smallest:\n",
-        "    smallest = n\n",
-        "\n",
-        "print(smallest)"
-      ],
-      "metadata": {
-        "id": "5OSOQAVc3s3X"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Find the sum of all elements on a list\n",
-        "\n",
-        "Go through all of the elements and add their values to an accumulator variable."
-      ],
-      "metadata": {
-        "id": "rFL_vZuR_A2Z"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "my_sum = 0\n",
-        "\n",
-        "for n in list_of_randoms:\n",
-        "  my_sum += n\n",
-        "\n",
-        "print(my_sum)"
-      ],
-      "metadata": {
-        "id": "g4FjyViC4T_p"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Python has built in functions for doing these things"
-      ],
-      "metadata": {
-        "id": "VlI-SzPa_Ja4"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(min(list_of_randoms), max(list_of_randoms), sum(list_of_randoms))"
-      ],
-      "metadata": {
-        "id": "ruGHhgm05p_t"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Python also has a function for sorting a list."
+        "### Python has a very useful function for sorting lists."
       ],
       "metadata": {
         "id": "8sYq0tQj6z0e"
@@ -368,17 +158,274 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Creating objects"
+      ],
+      "metadata": {
+        "id": "QSodBdxw0byR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_info = {\n",
+        "  \"name\": \"thiago\",\n",
+        "  \"id\": 8114,\n",
+        "  \"zip\": 11001,\n",
+        "  \"grades\": [90, 80, 60],\n",
+        "  \"attendance\": [True, True, False, True, True],\n",
+        "  \"final grade\": \"A\"\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Hukt4YNv0avQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_info"
+      ],
+      "metadata": {
+        "id": "-LBHNWgd9t3k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Iterating over key/values"
+      ],
+      "metadata": {
+        "id": "k2sCp_La1PiP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for key, val in my_info.items():\n",
+        "  print(\"key\", key, \"has value\", val)"
+      ],
+      "metadata": {
+        "id": "Mkw7MQWg1SYW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Accessing values at specific keys"
+      ],
+      "metadata": {
+        "id": "RJog1ZUU1kqO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_grades = my_info[\"grades\"]\n",
+        "print(my_grades)"
+      ],
+      "metadata": {
+        "id": "xvoyXmaJ1jtp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: Sum of grades"
+      ],
+      "metadata": {
+        "id": "oJFC6YXM1zXp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: Average attendance"
+      ],
+      "metadata": {
+        "id": "_RdS3XvI11jv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### List of objects\n",
+        "\n",
+        "Creating a list of 10 objects with random heights and brooklyn zip codes."
+      ],
+      "metadata": {
+        "id": "YIV3UD4N7rvd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_data = []\n",
+        "\n",
+        "for c in range(0, 10):\n",
+        "  my_object = {\n",
+        "    \"height\": random.randint(60, 70),\n",
+        "    \"zip\": random.randint(11200, 11240)\n",
+        "  }\n",
+        "\n",
+        "  my_data.append(my_object)"
+      ],
+      "metadata": {
+        "id": "JZ0HeNOh7xRY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for d in my_data:\n",
+        "  print(d)"
+      ],
+      "metadata": {
+        "id": "r9uxkXFJ-31z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Get list of all heights"
+      ],
+      "metadata": {
+        "id": "6MN8kSsb-Wuf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "heights = []\n",
+        "\n",
+        "for d in my_data:\n",
+        "  # TODO\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "lwYlxres-da4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Sort by key values\n",
+        "\n",
+        "For example, sort objects by zip code"
+      ],
+      "metadata": {
+        "id": "JZGXUIl5_Ul5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "zips = []\n",
+        "\n",
+        "for d in my_data:\n",
+        "  zips.append(d[\"zip\"])\n",
+        "\n",
+        "print(zips)\n",
+        "\n",
+        "by_zip = sorted(zips)\n",
+        "\n",
+        "print(by_zip)"
+      ],
+      "metadata": {
+        "id": "xUUNiR8hBxN5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### But now we don't have the associated heights with each zip code.\n",
+        "\n",
+        "We want to sort the list while keeping the objects together"
+      ],
+      "metadata": {
+        "id": "HVOTC9lmBxtm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "by_zip = sorted(my_data)\n",
+        "\n",
+        "print(by_zip)"
+      ],
+      "metadata": {
+        "id": "cRGTCxnx_ag2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### For lists of objects we have to tell python which values to compare to determine their order\n",
+        "\n",
+        "We do this by defining a key function"
+      ],
+      "metadata": {
+        "id": "v8k00TxzBXBz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def zipKey(A):\n",
+        "  return A[\"zip\"]\n",
+        "\n",
+        "by_zip = sorted(my_data, key=zipKey)\n",
+        "\n",
+        "print(by_zip)"
+      ],
+      "metadata": {
+        "id": "9h0l5lOK_mdd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: sort by height"
+      ],
+      "metadata": {
+        "id": "VEyQWqasBnRK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "# TODO:\n",
-        "  # Create Objs\n",
-        "  # Iterate Objs\n",
-        "  # Get all values with a key\n",
-        "  # Sort Obj by key\n",
         "  # Get Min/Max of key (?)"
       ],
       "metadata": {
-        "id": "ihnW6xNVY5Z5"
+        "id": "9xq_M_l4CbcH"
       },
       "execution_count": null,
       "outputs": []
