--- a/WK03.ipynb
+++ b/WK03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVl2waPaEUSUIll+QvlUQ4"
+      "authorship_tag": "ABX9TyNA1lD1Mkku7k6a9I/GQxBG"
     },
     "kernelspec": {
       "name": "python3",
@@ -78,7 +78,8 @@
         "  n = random.randint(0, 2000)\n",
         "  list_of_randoms.append(n)\n",
         "\n",
-        "print(list_of_randoms)"
+        "print(list_of_randoms)\n",
+        "print(len(list_of_randoms))"
       ],
       "metadata": {
         "id": "36_m35zIyN2h"
@@ -99,7 +100,7 @@
       "cell_type": "code",
       "source": [
         "for i in range(0, 10):\n",
-        "  print(\"element \", i, \" is \", list_of_randoms[i])"
+        "  print(\"element\", i, \"is\", list_of_randoms[i])"
       ],
       "metadata": {
         "id": "h3ochjQlzQ4e"
@@ -120,7 +121,9 @@
       "cell_type": "code",
       "source": [
         "my_sorted_list = sorted(list_of_randoms)\n",
-        "print(my_sorted_list)"
+        "\n",
+        "print(my_sorted_list)\n",
+        "print(len(my_sorted_list))"
       ],
       "metadata": {
         "id": "DJlfGTZZ6SJt"
@@ -140,7 +143,8 @@
     {
       "cell_type": "code",
       "source": [
-        "print(my_sorted_list[:5], my_sorted_list[-5:])"
+        "print(my_sorted_list[:5])\n",
+        "print(my_sorted_list[-5:])"
       ],
       "metadata": {
         "id": "ytoCAy4p_dCZ"
@@ -330,7 +334,9 @@
       "source": [
         "### Sort by key values\n",
         "\n",
-        "For example, sort objects by zip code"
+        "For example, sort objects by zip code.\n",
+        "\n",
+        "We could first get all the zip codes and then sort the new list:"
       ],
       "metadata": {
         "id": "JZGXUIl5_Ul5"
@@ -344,10 +350,12 @@
         "for d in my_data:\n",
         "  zips.append(d[\"zip\"])\n",
         "\n",
+        "print(\"original:\")\n",
         "print(zips)\n",
         "\n",
         "by_zip = sorted(zips)\n",
         "\n",
+        "print(\"sorted:\")\n",
         "print(by_zip)"
       ],
       "metadata": {
@@ -419,10 +427,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Min/Max functions also work with key argument"
+      ],
+      "metadata": {
+        "id": "WSRlUNN3CNTA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# TODO:\n",
-        "  # Get Min/Max of key (?)"
+        "max_by_zip = max(my_data, key=zipKey)\n",
+        "\n",
+        "print(max_by_zip)\n",
+        "\n",
+        "min_by_height = min(my_data, key=heightKey)\n",
+        "\n",
+        "print(min_by_height)"
       ],
       "metadata": {
         "id": "9xq_M_l4CbcH"
@@ -449,7 +471,12 @@
         "\n",
         "heights = object_from_json_url(HEIGHT_FILE)\n",
         "\n",
-        "# look at some of the data"
+        "# look at some of the data\n",
+        "\n",
+        "# TODO:\n",
+        "#   - how many items ?\n",
+        "#   - what's biggest height ?\n",
+        "#   - what's smallest ?"
       ],
       "metadata": {
         "id": "M2MhJi4pcoKv"
@@ -468,7 +495,12 @@
         "weights = object_from_json_url(WEIGHT_FILE)\n",
         "ansur = object_from_json_url(ANSUR_FILE)\n",
         "\n",
-        "# look at some of the data"
+        "# look at some of the data\n",
+        "\n",
+        "# TODO:\n",
+        "#   - how many items ?\n",
+        "#   - what's biggest age ?\n",
+        "#   - what's smallest ?"
       ],
       "metadata": {
         "id": "dyvLoSIGnecd"
@@ -485,7 +517,12 @@
         "\n",
         "ansur = object_from_json_url(ANSUR_OBJ_FILE)\n",
         "\n",
-        "# look at some of the data"
+        "# look at some of the data\n",
+        "\n",
+        "# TODO:\n",
+        "#   - how many items ?\n",
+        "#   - what's biggest age ?\n",
+        "#   - what's smallest ?"
       ],
       "metadata": {
         "id": "eP07D04AW4ab"
@@ -502,7 +539,12 @@
         "\n",
         "ansur = object_from_json_url(ANSUR_OBJ_FILE)\n",
         "\n",
-        "# look at some of the data"
+        "# look at some of the data\n",
+        "\n",
+        "# TODO:\n",
+        "#   - how many items ?\n",
+        "#   - how many \"columns\" or features ?\n",
+        "#   - what could be an interesting feature ?"
       ],
       "metadata": {
         "id": "ts0Y8VopXcK0"
@@ -547,7 +589,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# plot sorted"
+        "# plot sorted heights"
       ],
       "metadata": {
         "id": "QhuUqx0Cn61r"
@@ -588,7 +630,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# get \"columns\""
+        "# TODO: get 2 \"columns\" and plot scatter plot"
       ],
       "metadata": {
         "id": "qCp1wD28xTS3"
