--- a/WK03.ipynb
+++ b/WK03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQTBfqLCC7wcgGnR5GaZ9h"
+      "authorship_tag": "ABX9TyNMQxW6XeybaTC06V+yeCoA"
     },
     "kernelspec": {
       "name": "python3",
@@ -38,11 +38,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget -q https://github.com/DM-GY-9103-2024S-R/WK02/raw/main/WK02_utils.py\n",
-        "\n",
-        "from WK02_utils import object_from_json_url\n",
-        "\n",
-        "import matplotlib.pyplot as plt\n",
         "import random"
       ],
       "metadata": {
@@ -308,23 +303,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Get list of all heights"
+        "## Functions\n",
+        "\n",
+        "Repeatable code with parameters"
       ],
       "metadata": {
-        "id": "6MN8kSsb-Wuf"
+        "id": "xB3yvp9rQzDB"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "heights = []\n",
+        "def say_hello(name):\n",
+        "  print(\"hello \" + name + \". How are you today?\")\n",
         "\n",
-        "for d in my_data:\n",
-        "  # TODO\n",
-        "  pass"
+        "say_hello(\"thiago\")\n",
+        "say_hello(\"dominique\")\n",
+        "say_hello(\"pepe\")"
       ],
       "metadata": {
-        "id": "lwYlxres-da4"
+        "id": "HmKQsv0ERh2-"
       },
       "execution_count": null,
       "outputs": []
@@ -332,34 +330,159 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Sort by key values\n",
+        "## Return values\n",
         "\n",
-        "For example, sort objects by zip code.\n",
-        "\n",
-        "We could first get all the zip codes and then sort the new list:"
+        "Functions can also return values calculated from the parameters"
       ],
       "metadata": {
-        "id": "JZGXUIl5_Ul5"
+        "id": "Rj5q33lzR9sE"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "zips = []\n",
+        "def add2(A, B):\n",
+        "  return A + B\n",
         "\n",
-        "for d in my_data:\n",
-        "  zips.append(d[\"zip\"])\n",
+        "x = add2(20, 30)\n",
+        "y = add2(30, 55)\n",
         "\n",
-        "print(\"original:\")\n",
-        "print(zips)\n",
-        "\n",
-        "by_zip = sorted(zips)\n",
-        "\n",
-        "print(\"sorted:\")\n",
-        "print(by_zip)"
+        "print(x, y)"
       ],
       "metadata": {
-        "id": "xUUNiR8hBxN5"
+        "id": "AbK9xOYtQ0NG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Function to calculate average of list"
+      ],
+      "metadata": {
+        "id": "EuhudlxAREbv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def list_average(mlist):\n",
+        "  # TODO\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "XqyFBs36RSJs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_list_0 = []\n",
+        "random_list_1 = []\n",
+        "\n",
+        "for c in range(0, 10):\n",
+        "  random_list_0.append(random.randint(0, 200))\n",
+        "\n",
+        "for c in range(0, 50):\n",
+        "  random_list_1.append(random.randint(1000, 2000))\n",
+        "\n",
+        "print(random_list_0)\n",
+        "print(random_list_1)"
+      ],
+      "metadata": {
+        "id": "UbBhKRG7Sbmy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "avg_0 = list_average(random_list_0)\n",
+        "avg_1 = list_average(random_list_1)\n",
+        "\n",
+        "print(avg_0)\n",
+        "print(avg_1)"
+      ],
+      "metadata": {
+        "id": "3_OWQmUfStD_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Classes\n",
+        "\n",
+        "Encapsulate data"
+      ],
+      "metadata": {
+        "id": "737rI3qoQ0-m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Person:\n",
+        "  def __init__(self, name, age, height):\n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        "    self.height = height\n",
+        "    self.grades = []\n",
+        "\n",
+        "p0 = Person(\"pepe\", 32, 67)\n",
+        "p1 = Person(\"nina\", 30, 60)\n",
+        "\n",
+        "print(p0)\n",
+        "print(p1)"
+      ],
+      "metadata": {
+        "id": "uxz_1PmRQ1zd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Access member variables"
+      ],
+      "metadata": {
+        "id": "NG63bfX2XJGE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: print names"
+      ],
+      "metadata": {
+        "id": "9nTskZOUWrcR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Encapsulate behavior and calculations"
+      ],
+      "metadata": {
+        "id": "0gXiWyNkW9h7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: add grade\n",
+        "# TODO: calculate average grade"
+      ],
+      "metadata": {
+        "id": "_LqG2culXBa0"
       },
       "execution_count": null,
       "outputs": []
