--- a/WK03.ipynb
+++ b/WK03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMQxW6XeybaTC06V+yeCoA"
+      "authorship_tag": "ABX9TyPpzmkmQEuZ8IyrRhDe+46n"
     },
     "kernelspec": {
       "name": "python3",
@@ -99,6 +99,17 @@
       ],
       "metadata": {
         "id": "h3ochjQlzQ4e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_of_randoms[3]"
+      ],
+      "metadata": {
+        "id": "uT7whk1u7yEE"
       },
       "execution_count": null,
       "outputs": []
@@ -239,7 +250,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO: Sum of grades"
+        "# Sum of grades\n",
+        "sum_grades = sum(my_grades)\n",
+        "print(sum_grades)"
       ],
       "metadata": {
         "id": "oJFC6YXM1zXp"
@@ -250,7 +263,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO: Average attendance"
+        "# Average attendance\n",
+        "print(my_info[\"attendance\"])\n",
+        "\n",
+        "sum_attendance = sum(my_info[\"attendance\"])\n",
+        "print(sum_attendance)\n",
+        "\n",
+        "avg_attendance = sum_attendance / len(my_info[\"attendance\"])\n",
+        "print(avg_attendance)"
       ],
       "metadata": {
         "id": "_RdS3XvI11jv"
@@ -368,8 +388,7 @@
       "cell_type": "code",
       "source": [
         "def list_average(mlist):\n",
-        "  # TODO\n",
-        "  pass"
+        "  return sum(mlist) / len(mlist)"
       ],
       "metadata": {
         "id": "XqyFBs36RSJs"
@@ -434,11 +453,23 @@
         "    self.height = height\n",
         "    self.grades = []\n",
         "\n",
+        "  def say_name(self):\n",
+        "    print(self.name)\n",
+        "\n",
+        "  def average_grades(self):\n",
+        "    if len(self.grades) > 0:\n",
+        "      return sum(self.grades) / len(self.grades)\n",
+        "    else:\n",
+        "      return 0\n",
+        "\n",
         "p0 = Person(\"pepe\", 32, 67)\n",
         "p1 = Person(\"nina\", 30, 60)\n",
         "\n",
         "print(p0)\n",
-        "print(p1)"
+        "print(p1)\n",
+        "\n",
+        "p0.say_name()\n",
+        "p1.say_name()"
       ],
       "metadata": {
         "id": "uxz_1PmRQ1zd"
@@ -458,7 +489,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO: print names"
+        "print(p0.name)\n",
+        "print(p1.name)"
       ],
       "metadata": {
         "id": "9nTskZOUWrcR"
@@ -478,8 +510,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO: add grade\n",
-        "# TODO: calculate average grade"
+        "# insert grades\n",
+        "\n",
+        "p0.grades.append(80)\n",
+        "p0.grades.append(90)\n",
+        "p0.grades.append(85)\n",
+        "\n",
+        "\n",
+        "# get average grade\n",
+        "print(p0.average_grades())\n",
+        "print(p1.average_grades())"
       ],
       "metadata": {
         "id": "_LqG2culXBa0"
