--- a/WK03.ipynb
+++ b/WK03.ipynb
@@ -1,71 +1,61 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPpzmkmQEuZ8IyrRhDe+46n"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Week 03 exercises"
-      ],
       "metadata": {
         "id": "Ty-DVrJlaN1T"
-      }
+      },
+      "source": [
+        "# Week 03 exercises"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "s-e8uvrIca09"
+      },
       "source": [
         "## Setup\n",
         "\n",
         "Include some helper functions and libraries"
-      ],
-      "metadata": {
-        "id": "s-e8uvrIca09"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import random"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "uHIQDMJ-WTei"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import random"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Lists"
-      ],
       "metadata": {
         "id": "sX5wEtIkWKhD"
-      }
+      },
+      "source": [
+        "## Lists"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Create a list of 10 random numbers between 0 and 2000"
-      ],
       "metadata": {
         "id": "hBs429yN9wYE"
-      }
+      },
+      "source": [
+        "### Create a list of 10 random numbers between 0 and 2000"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "36_m35zIyN2h"
+      },
+      "outputs": [],
       "source": [
         "list_of_randoms = []\n",
         "\n",
@@ -75,109 +65,109 @@
         "\n",
         "print(list_of_randoms)\n",
         "print(len(list_of_randoms))"
-      ],
-      "metadata": {
-        "id": "36_m35zIyN2h"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Print the numbers and their index"
-      ],
       "metadata": {
         "id": "7Aw4WiDS92MU"
-      }
+      },
+      "source": [
+        "### Print the numbers and their index"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for i in range(0, 10):\n",
-        "  print(\"element\", i, \"is\", list_of_randoms[i])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "h3ochjQlzQ4e"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "for i in range(0, 10):\n",
+        "  print(\"element\", i, \"is\", list_of_randoms[i])"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "list_of_randoms[3]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "uT7whk1u7yEE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "list_of_randoms[3]"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Python has a very useful function for sorting lists."
-      ],
       "metadata": {
         "id": "8sYq0tQj6z0e"
-      }
+      },
+      "source": [
+        "### Python has a very useful function for sorting lists."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "DJlfGTZZ6SJt"
+      },
+      "outputs": [],
       "source": [
         "my_sorted_list = sorted(list_of_randoms)\n",
         "\n",
         "print(my_sorted_list)\n",
         "print(len(my_sorted_list))"
-      ],
-      "metadata": {
-        "id": "DJlfGTZZ6SJt"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### With a sorted list we can print the 5 smallest and 5 largest elements"
-      ],
       "metadata": {
         "id": "zIJjJ8rx_W8s"
-      }
+      },
+      "source": [
+        "### With a sorted list we can print the 5 smallest and 5 largest elements"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(my_sorted_list[:5])\n",
-        "print(my_sorted_list[-5:])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ytoCAy4p_dCZ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(my_sorted_list[:5])\n",
+        "print(my_sorted_list[-5:])"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Objects/Dictionaries"
-      ],
       "metadata": {
         "id": "tEQUt3lwY2xE"
-      }
+      },
+      "source": [
+        "## Objects/Dictionaries"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Creating objects"
-      ],
       "metadata": {
         "id": "QSodBdxw0byR"
-      }
+      },
+      "source": [
+        "### Creating objects"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Hukt4YNv0avQ"
+      },
+      "outputs": [],
       "source": [
         "my_info = {\n",
         "  \"name\": \"thiago\",\n",
@@ -187,81 +177,81 @@
         "  \"attendance\": [True, True, False, True, True],\n",
         "  \"final grade\": \"A\"\n",
         "}"
-      ],
-      "metadata": {
-        "id": "Hukt4YNv0avQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "my_info"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-LBHNWgd9t3k"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "my_info"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Iterating over key/values"
-      ],
       "metadata": {
         "id": "k2sCp_La1PiP"
-      }
+      },
+      "source": [
+        "### Iterating over key/values"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for key, val in my_info.items():\n",
-        "  print(\"key\", key, \"has value\", val)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Mkw7MQWg1SYW"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "for key, val in my_info.items():\n",
+        "  print(\"key\", key, \"has value\", val)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Accessing values at specific keys"
-      ],
       "metadata": {
         "id": "RJog1ZUU1kqO"
-      }
+      },
+      "source": [
+        "### Accessing values at specific keys"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "my_grades = my_info[\"grades\"]\n",
-        "print(my_grades)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "xvoyXmaJ1jtp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "my_grades = my_info[\"grades\"]\n",
+        "print(my_grades)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "oJFC6YXM1zXp"
+      },
+      "outputs": [],
       "source": [
         "# Sum of grades\n",
         "sum_grades = sum(my_grades)\n",
         "print(sum_grades)"
-      ],
-      "metadata": {
-        "id": "oJFC6YXM1zXp"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_RdS3XvI11jv"
+      },
+      "outputs": [],
       "source": [
         "# Average attendance\n",
         "print(my_info[\"attendance\"])\n",
@@ -271,26 +261,26 @@
         "\n",
         "avg_attendance = sum_attendance / len(my_info[\"attendance\"])\n",
         "print(avg_attendance)"
-      ],
-      "metadata": {
-        "id": "_RdS3XvI11jv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YIV3UD4N7rvd"
+      },
       "source": [
         "### List of objects\n",
         "\n",
         "Creating a list of 10 objects with random heights and brooklyn zip codes."
-      ],
-      "metadata": {
-        "id": "YIV3UD4N7rvd"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JZ0HeNOh7xRY"
+      },
+      "outputs": [],
       "source": [
         "my_data = []\n",
         "\n",
@@ -301,38 +291,38 @@
         "  }\n",
         "\n",
         "  my_data.append(my_object)"
-      ],
-      "metadata": {
-        "id": "JZ0HeNOh7xRY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for d in my_data:\n",
-        "  print(d)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "r9uxkXFJ-31z"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "for d in my_data:\n",
+        "  print(d)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "xB3yvp9rQzDB"
+      },
       "source": [
         "## Functions\n",
         "\n",
         "Repeatable code with parameters"
-      ],
-      "metadata": {
-        "id": "xB3yvp9rQzDB"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HmKQsv0ERh2-"
+      },
+      "outputs": [],
       "source": [
         "def say_hello(name):\n",
         "  print(\"hello \" + name + \". How are you today?\")\n",
@@ -340,26 +330,26 @@
         "say_hello(\"thiago\")\n",
         "say_hello(\"dominique\")\n",
         "say_hello(\"pepe\")"
-      ],
-      "metadata": {
-        "id": "HmKQsv0ERh2-"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Rj5q33lzR9sE"
+      },
       "source": [
         "## Return values\n",
         "\n",
         "Functions can also return values calculated from the parameters"
-      ],
-      "metadata": {
-        "id": "Rj5q33lzR9sE"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AbK9xOYtQ0NG"
+      },
+      "outputs": [],
       "source": [
         "def add2(A, B):\n",
         "  return A + B\n",
@@ -368,36 +358,36 @@
         "y = add2(30, 55)\n",
         "\n",
         "print(x, y)"
-      ],
-      "metadata": {
-        "id": "AbK9xOYtQ0NG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Function to calculate average of list"
-      ],
       "metadata": {
         "id": "EuhudlxAREbv"
-      }
+      },
+      "source": [
+        "### Function to calculate average of list"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def list_average(mlist):\n",
-        "  return sum(mlist) / len(mlist)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XqyFBs36RSJs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def list_average(mlist):\n",
+        "  return sum(mlist) / len(mlist)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UbBhKRG7Sbmy"
+      },
+      "outputs": [],
       "source": [
         "random_list_0 = []\n",
         "random_list_1 = []\n",
@@ -410,41 +400,41 @@
         "\n",
         "print(random_list_0)\n",
         "print(random_list_1)"
-      ],
-      "metadata": {
-        "id": "UbBhKRG7Sbmy"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3_OWQmUfStD_"
+      },
+      "outputs": [],
       "source": [
         "avg_0 = list_average(random_list_0)\n",
         "avg_1 = list_average(random_list_1)\n",
         "\n",
         "print(avg_0)\n",
         "print(avg_1)"
-      ],
-      "metadata": {
-        "id": "3_OWQmUfStD_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "737rI3qoQ0-m"
+      },
       "source": [
         "## Classes\n",
         "\n",
         "Encapsulate data"
-      ],
-      "metadata": {
-        "id": "737rI3qoQ0-m"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "uxz_1PmRQ1zd"
+      },
+      "outputs": [],
       "source": [
         "class Person:\n",
         "  def __init__(self, name, age, height):\n",
@@ -470,45 +460,45 @@
         "\n",
         "p0.say_name()\n",
         "p1.say_name()"
-      ],
-      "metadata": {
-        "id": "uxz_1PmRQ1zd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Access member variables"
-      ],
       "metadata": {
         "id": "NG63bfX2XJGE"
-      }
+      },
+      "source": [
+        "### Access member variables"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(p0.name)\n",
-        "print(p1.name)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9nTskZOUWrcR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(p0.name)\n",
+        "print(p1.name)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Encapsulate behavior and calculations"
-      ],
       "metadata": {
         "id": "0gXiWyNkW9h7"
-      }
+      },
+      "source": [
+        "### Encapsulate behavior and calculations"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_LqG2culXBa0"
+      },
+      "outputs": [],
       "source": [
         "# insert grades\n",
         "\n",
@@ -520,12 +510,22 @@
         "# get average grade\n",
         "print(p0.average_grades())\n",
         "print(p1.average_grades())"
-      ],
-      "metadata": {
-        "id": "_LqG2culXBa0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPpzmkmQEuZ8IyrRhDe+46n",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
